[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncensored"
version = "0.0.1"
description = "Official python library for the Uncensored AI (uncensored.com) API"
readme = "README.md"
authors = [
    { name = "Uncensored AI", email = "devs@uncensored.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "llm", "uncensored", "chat", "image generation", "fine-tuning"]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/uncensored-com"
Documentation = "https://uncensored.com/docs"
Repository = "https://github.com/uncensored-com"
"Bug Tracker" = "https://github.com/uncensored-com"

[project.scripts]
uncensored = "uncensored.cli:main"

[tool.setuptools]
packages = ["uncensored"]

[tool.setuptools.package-data]
uncensored = ["py.typed"]
